# WLKATA-AI-Drawing-Extension

./: .gitignore  README.md  create_conda_env.yml  pyproject.toml  requirements.txt
docs/: conf.py  drawing.rst  index.rst
docs/_build/doctrees/: drawing.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  drawing.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/drawing/: drawing.html
drawing/: __init__.py  drawing.py
playing_card/: model.py
playing_card/yolo_fine_tuning/: train.py
src/wlkatapython_extensions/card/: modify.ipynb
src/wlkatapython_extensions/card/24point/: 24points.py
src/wlkatapython_extensions/card/yolofinetuning/: train.py
src/wlkatapython_extensions/drawing/: __init__.py  drawing.py
src/wlkatapython_extensions/drawing/data/numbers/: (.txt  0.txt  1.txt  2.txt  3.txt  9.txt
src/wlkatapython_extensions/drawing/numbers/: ).txt  *.txt  +.txt  -.txt  4.txt  5.txt  6.txt  7.txt  8.txt  d.txt
src/wlkatapython_extensions/playing_card/black_jack/: 24points.py  collaborate.py  model.py
src/wlkatapython_extensions/playing_card/numbers/: (.txt  ).txt  *.txt  +.txt  -.txt  0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  MT4.txt  div.txt
src/wlkatapython_extensions/playing_card/yolo_fine_tuning/runs/detect/train/: args.yaml  results.csv
