[project]
name = "wlkatapython-extensions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Ji", email = "462499571@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.5",
    "opencv-python>=4.12.0.88",
    "pyserial>=3.5",
    "tqdm>=4.67.1",
    "wlkatapython>=0.1.0",
]

[project.scripts]
wlkatapython-extensions = "wlkatapython_extensions:main"

[project.optional-dependencies]
vision = [
    "ultralytics>=8.3.174",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
